spring secure okay, with get method application done

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
 
   security:
     user:
-      name: admin   # ?? ??? ID
-      password: pass1234 # ?? ??? ???? (????, ?? ????? ?? ??)
+      name: admin   # login ID
+      password: pass1234 # login password (for test, delete for deployment)
 
 server:
   port: 8080
